[package]
name = "goggled"
version = "0.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[dependencies]
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
clap = {version = "4.1.4", features = ["derive"]}
tokio = { version = "1.34", default-features = false, features = ["macros", "rt", "time"] }
tracing = { version = "0.1", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["ansi", "chrono", "env-filter", "fmt"] }
x11-dl = { version = "2.21.0", default-features = false }
zbus = { version = "3.14", default-features = false, features = ["tokio"] }
